--- a/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Part 1 - Tensors in PyTorch (Exercises).ipynb",
       "version": "0.3.2",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "language_info": {
       "codemirror_mode": {
@@ -27,16 +26,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/AToMiXhawK/deep-learning-v2-pytorch/blob/master/intro-to-pytorch/Part%201%20-%20Tensors%20in%20PyTorch%20(Exercises).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -154,9 +143,7 @@
         "# True weights for our data, random normal variables again\n",
         "weights = torch.randn_like(features)\n",
         "# and a true bias term\n",
-        "bias = torch.randn((1, 1))\n",
-        "\n",
-        "##test edit"
+        "bias = torch.randn((1, 1))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -185,13 +172,55 @@
       "metadata": {
         "id": "DMvvJgdrBrkC",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2b21e03f-9762-4d21-dfe2-32c095d5404d"
       },
       "source": [
-        "## Calculate the output of this network using the weights and bias tensors"
+        "## Calculate the output of this network using the weights and bias tensors\n",
+        "\n",
+        "y = activation(torch.sum(features * weights) + bias)\n",
+        "print(y)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tensor([[0.1595]])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L1qW68dTHj6F",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4746bc6a-f6eb-4600-fd36-2f5aa09ee462"
+      },
+      "source": [
+        "mat = torch.mm(features, weights.reshape(5,1))\n",
+        "y = activation(torch.sum(mat) + bias)\n",
+        "print(y)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tensor([[0.1595]])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -235,13 +264,29 @@
       "metadata": {
         "id": "OsB89tyBBrkG",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3d8c57b0-3b68-4e85-dc8f-c61165d46963"
       },
       "source": [
-        "## Calculate the output of this network using matrix multiplication"
+        "## Calculate the output of this network using matrix multiplication\n",
+        "\n",
+        "mat = torch.mm(features, weights.reshape(5,1))\n",
+        "y = activation(torch.sum(mat) + bias)\n",
+        "print(y)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tensor([[0.1595]])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
